chore: rework javadocs
Signed-off-by: Thiago Moura <thiagogcm@gmail.com>